--- a/MiRate/appsettings.Development.json
+++ b/MiRate/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=MABSI-PC;Initial Catalog=MiRate;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "NotificationConnection": "Data Source=MABSI-PC;Initial Catalog=MiRate;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "CommonConnection": "Data Source=MABSI-PC;Initial Catalog=MiRate;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "AttachmentsConnection": "Data Source=MABSI-PC;Initial Catalog=MiRate;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "ApplicationConnection": "Data Source=MABSI-PC;Initial Catalog=MiRate;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
